<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AquaNotes</string>
    <string name="description_logo">AquaNotes</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Controllers</string>
    <string name="description_now">Go to Now</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_outletsX">Outlets</string>
    <string name="title_outlet_detail">Outlet information</string>
    <string name="title_controllers">Fix this title</string>
    <string name="title_livestock">Livestock</string>
    <string name="title_outlets">Outlets</string>
    <string name="title_probes">Probes</string>
    <string name="title_data">Data</string>
    <string name="title_probe_detail">Probe information</string>
    <string name="title_feed">Feed Cycle</string>
    <string name="title_tagstream">What is being discussed about Neptune</string>
    <string name="title_prefs">Prefs</string>
    <string name="title_outlets_tracks">Outlets</string>
    <string name="title_probes_tracks">Probes</string>
    <string name="title_share">Share using</string>
    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \"<xliff:g id="query">%1$s</xliff:g>\"</string>
    <string name="btn_schedule">Schedule</string>
    <string name="btn_data">db: Data</string>
    <string name="btn_feed">Feed Cycle</string>
    <string name="btn_controllers">Controllers</string>
    <string name="btn_livestock">Livestock</string>
    <string name="btn_prefs">Prefs</string>
    <string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
    <string name="session_subtitle"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>
    <string name="session_moderator_status"><xliff:g id="questions">%1$s</xliff:g> questions submitted and <xliff:g id="votes">%2$s</xliff:g> votes cast.</string>
    <string name="all_sandbox_title">All companies</string>
    <string name="all_sandbox_subtitle">Touch to filter by sandbox companies by pod.</string>
    <string name="all_sessions_title">All sessions</string>
    <string name="all_sessions_subtitle">Touch to filter sessions by track.</string>
    <string name="empty_outlets">No outlets found.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="empty_probes">No probes found.</string>
    <string name="empty_search">No search results found.</string>
    <string name="empty_links">No links available.</string>
    <string name="session_summary">Summary</string>
    <string name="session_notes">Notes</string>
    <string name="session_links">Links</string>
    <string name="session_requirements">Requirements</string>
    <string name="session_speakers">Speakers</string>
    <string name="tag_stream">Realtime stream for</string>
    <string name="session_link_main">Web link</string>
    <string name="session_link_moderator">Ask questions</string>
    <string name="session_link_youtube">YouTube video</string>
    <string name="session_link_pdf">Slides (PDF)</string>
    <string name="session_link_feedback">Feedback on this session</string>
    <string name="session_link_notes">Official notes</string>
    <string name="search_sessions">Sessions</string>
    <string name="search_vendors">Sandbox</string>
    <string name="outlets_tab_title">Outlets</string>
    <string name="probes_tab_title">Probes</string>
    <string name="graphs_tab_title">Graphs</string>
    <string name="notes_tab_title">Notes</string>
    <string name="search_label">Google I/O</string>
    <string name="search_hint">Session keywords</string>
    <string name="share_template">Checking out \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="hashtags">%2$s</xliff:g> <xliff:g id="url">%3$s</xliff:g></string>
    <string name="moderator_header">Moderator</string>
    <string name="dialog_moderator_title">Google Moderator</string>
    <string name="dialog_moderator_message">The official Google Moderator app is available in Market. Do you want to install it or continue using a normal browser?</string>
    <string name="dialog_moderator_web">Use browser</string>
    <string name="dialog_moderator_market">Visit Market</string>
    <plurals name="whats_on_countdown_title">
        <item quantity="zero"><xliff:g id="remaining_time">%2$s</xliff:g>\nuntil Google I/O</item>
        <item quantity="one"><xliff:g id="number_of_days">%1$s</xliff:g> day, <xliff:g id="remaining_time">%2$s</xliff:g>\nuntil Google I/O</item>
        <item quantity="other"><xliff:g id="number_of_days">%1$s</xliff:g> days, <xliff:g id="remaining_time">%2$s</xliff:g>\nuntil Google I/O</item>
    </plurals>
    <string name="whats_on_stream_title">Realtime\nstream</string>
    <string name="whats_on_now_playing_title">Now playing</string>
    <string name="whats_on_thank_you_title">I really need to work on the graphical layout</string>
    <string name="permission_write">Modify AquaNotes data</string>
    <string name="toast_now_not_visible">Touch this button during Google I/O to show the current time.</string>
    <string name="notes_catch_powered_by">Notes are powered by <a href="http://www.catch.com/">Catch.com</a>.</string>
    <string name="notes_catch_market_title">Install Catch Notes</string>
    <string name="notes_catch_market_subtitle">You can take notes for your tank using the latest version of Catch Notes, available from Android Market.</string>
    <string name="notes_catch_new_title">Create a new note</string>
    <string name="notes_catch_view_title">View tank notes</string>
    <string name="toast_notes_error_invoking">Couldn\'t start Catch Notes.</string>
    <string name="note_template_controller">Controller: <xliff:g id="title">%1$s</xliff:g>\nTime: <xliff:g id="time">%2$s</xliff:g>\n\n\n\n__________\nTime: <xliff:g id="hashtags">%3$s</xliff:g></string>
    <string name="note_template_x">Controller: <xliff:g id="title">%1$s</xliff:g>\n\n\n\n__________\nTime: <xliff:g id="hashtags">%2$s</xliff:g></string>
    <string name="eula_title">Please Read.</string>
    <string name="eula_text">Please use the preferences icon to set your controller credentials before using any of the app features.\n\nFrom a legal point of view, you must agree not to sue me if your tank misbehaves due to use of this app.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_configure">Configure controller</string>
    <string name="conf_controller_name_instr">Enter a title for this controller:</string>
    <string name="conf_controller_name_default">My Apex</string>
    <string name="conf_controller_url_instr">Enter a URL for this controller (WAN):</string>
    <string name="conf_controller_url_default">http://heneryh.homeip.net:1080/</string>
    <string name="conf_controller_wifi_url_instr">Enter a local URL for this controller when home (LAN):</string>
    <string name="conf_controller_wifi_url_default">http://192.168.1.50/</string>
    <string name="conf_controller_wifi_sid_instr">WiFi access point to detect when home:</string>
    <string name="conf_controller_wifi_sid_default">your_ssid</string>
    <string name="conf_controller_user_instr">Enter a username for this controller:</string>
    <string name="conf_controller_user_default">admin</string>
    <string name="conf_controller_password_instr">Enter a password for this controller:</string>
    <string name="conf_controller_password_default">1234</string>
    <string name="conf_controller_update_interval_instr">Enter a widget update interval in minutes:</string>
    <string name="conf_controller_update_interval_default">15</string>
    <string name="conf_controller_prune_instr">Days of historic data to keep:</string>
    <string name="conf_controller_prune_default">7</string>
    <string name="conf_save">Save/Add</string>
    <string name="conf_delete">Delete</string>
    <string name="widget_name_1x1">Apex Icon</string>
    <string name="widget_name_2x1">Apex Short</string>
    <string name="widget_name_2x2">Apex Tall</string>
    <string name="widget_loading">&quot;Loading\nApex status\u2026&quot;</string>
    <string-array name="outlet_spinner">
        <item>Auto</item>
        <item>Off</item>
        <item>On</item>
    </string-array>
        <string name="notification_text">Example notification text</string>
        <string name="camera_sample">Camera Example</string>
        <string name="photo_selection_cab_title">Photo selection</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="add_ls">Add</string>
    <string name="toggle_titles">Toggle Titles</string>
    <string name="day_night">Day/Night</string>
    <string name="show_dialog">Show a dialog</string>
    <string name="basic_notification">Show a basic notification</string>
    <string name="custom_notification">Show a custom notification</string>
    <string name="switch_camera">Switch camera</string>
    <string name="select_genus">Select existing or new genus to add an item to:</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="switch_camera_id">Switch Camera</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">5</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_720p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
</resources>